# Koskidex

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  go.mod  implementations.md  main.go  package-lock.json
.github/workflows/: ci.yml  deploy.yml
data/: koskidex.db
examples/: curl.sh
examples/laravel/: composer.json  test-client.php
examples/laravel/config/: koskidex.php
examples/nodejs/: koskidex_client.js  package-lock.json  package.json
examples/php/: koskidex_client.php
examples/python/: koskidex_client.py  pyproject.toml
internal/engine/: cache.go  cache_test.go  engine_bench_test.go  filter.go  filter_test.go  fuzzy.go  fuzzy_test.go  inverted.go  inverted_test.go  ranker.go  ranker_test.go  tokenizer.go  tokenizer_test.go  v2_test.go
internal/manager/: manager.go
internal/server/: handlers.go  ratelimit.go  server.go
internal/storage/: persistence.go  persistence_test.go  wal_test.go
scripts/: seed.go
tests/: api_extended_test.go  api_test.go  api_v2_test.go  seo_test.go
web/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/public/: manifest.json  robots.txt  sitemap.xml
web/src/: App.css  App.tsx  i18n.ts  index.css  types.ts
web/src/components/: DemoSetup.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  Hero.tsx  IntegrationSnippets.tsx  SearchUI.tsx
web/src/hooks/: useDocumentMeta.ts
web/src/locales/: en.json  it.json
web/src/pages/: Documentation.tsx  Home.tsx  NotFound.tsx  (+1 more)
(+2 files in other folders)
