[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "koskidex-python"
version = "1.0.0"
authors = [
  { name="Koskidex", email="info@koskidex.com" },
]
description = "Python client for Koskidex search engine"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
"Homepage" = "https://github.com/general-koski/koskidex"
